--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "dicom_study_clean"
-version = "0.1.0"
+name = "dcmstudyclean"
+version = "0.2.0"
 description = "Clean dicom files into folders seperated by study id name and then create json files with key information"
 authors = ["ryanapfel <rapfel@usc.edu>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 tqdm = "^4.64.0"
 pydicom = "^2.3.0"
 pandas = "^1.4.3"
@@ -18,3 +18,6 @@ simplejson = "^3.17.6"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+dcmstudyclean = 'dcmstudyclean.script:cli'
